--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.0
 jobs:
   build:
     docker:
-      - image: alpine:3.7
+      - image: circleci/ruby:2.5.3-stretch-node-browsers
     steps:
       - run:
           name: The First Step
