--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
       - image: circleci/ruby:2.5.3-stretch-node-browsers
         environment:
           RAILS_ENV: test
+          DATABASE_HOST: localhost
       - image: circleci/postgres:10.6
     steps:
       - checkout
@@ -14,23 +15,23 @@ jobs:
             cp ./config/database.yml.example ./config/database.yml
             cp ./config/master.key.example ./config/master.key
 
-      # Restore bundle cache
       - restore_cache:
+          name: Restore bundle cache
           keys:
             - cheezecake-is-good-{{ checksum "Gemfile.lock" }}
 
       - run:
-          name: Bundle Install
+          name: Bundle install
           command: bundle check || bundle install --path gems
 
-      # Store bundle cache
       - save_cache:
+          name: Save bundle cache
           key: cheezecake-is-good-{{ checksum "Gemfile.lock" }}
           paths:
             - gems
 
       - run:
-          name: Wait for DB
+          name: Wait for Database
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
 
       - run:
