--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,13 +22,13 @@ jobs:
 
       - run:
           name: Bundle install
-          command: bundle check || bundle install --path gems
+          command: bundle check || bundle install # default path is vendor/bundle
 
       - save_cache:
           name: Save bundle cache
           key: cheezecake-is-good-{{ checksum "Gemfile.lock" }}
           paths:
-            - gems
+            - vendor/bundle
 
       - run:
           name: Wait for Database
