--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - restore_cache:
           name: Restore bundle cache
           keys:
-            - cheezecake-is-good-{{ checksum "Gemfile.lock" }}
+            - cheezecake-is-good-v2-{{ checksum "Gemfile.lock" }}
 
       - run:
           name: Bundle install
@@ -26,7 +26,7 @@ jobs:
 
       - save_cache:
           name: Save bundle cache
-          key: cheezecake-is-good-{{ checksum "Gemfile.lock" }}
+          key: cheezecake-is-good-v2-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
 
