--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "cheezecake_blog",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^11.2.0",
+    "@ckeditor/ckeditor5-react": "^1.1.0",
     "@rails/webpacker": "3.5",
     "axios": "latest",
     "babel-preset-react": "^6.24.1",
