--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@ckeditor/ckeditor5-react": "^1.1.0",
     "@rails/webpacker": "3.5",
     "axios": "latest",
+    "babel-eslint": "^10.0.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^5.10.0",
+    "eslint-plugin-react": "^7.11.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
