--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -10,7 +10,7 @@ server {
   listen 80;
   server_name localhost;
   # define the public application root
-  root   /metro_review/public;
+  root   /cheezecake_blog/public;
   index  index.html;
 
   # define where Nginx should write its logs
@@ -50,30 +50,10 @@ server {
   }
 
   location @rails {
-    proxy_set_header  X-Real-IP  $remote_addr;
-    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Real-IP  $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
-    proxy_set_header X-CSRF-Token $http_x_csrf_token;
-    proxy_set_header X-Forwarded-Proto $scheme;
     proxy_redirect off;
     proxy_pass http://puma;
   }
-
-  listen [::]:443 ssl ipv6only=on; # managed by Certbot
-  listen 443 ssl; # managed by Certbot
-  ssl_certificate /etc/letsencrypt/live/crm.metroengines.jp/fullchain.pem; # managed by Certbot
-  ssl_certificate_key /etc/letsencrypt/live/crm.metroengines.jp/privkey.pem; # managed by Certbot
-  include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-}
-
-server {
-    if ($host = crm.metroengines.jp) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-    listen 80 ;
-    listen [::]:80 ;
-    server_name crm.metroengines.jp;
-    return 404; # managed by Certbot
 }
