--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
 ######################
+#    Rails
+######################
+RAILS_ENV=development
+NODE_ENV=development
+
+######################
 #    PostgresSQL
 ######################
 POSTGRES_USER=postgres
