--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -11,3 +11,10 @@ services:
     ports:
       - 80:80
       - 443:443
+    privileged: true
+
+  web:
+    privileged: true
+
+  postgres:
+    privileged: true
