--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -6,15 +6,9 @@ services:
       - web
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - static_files:/cheezecake_blog/public
     depends_on:
       - web
     ports:
       - 80:80
       - 443:443
-    privileged: true
-
-  web:
-    privileged: true
-
-  postgres:
-    privileged: true
