--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -7,7 +7,7 @@ services:
 
   nginx:
     image: nginx
-    container_name: cheezecake_nginx
+#    container_name: cheezecake_nginx
     links:
       - web
     volumes:
