--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: ./docker/web/Dockerfile
     image: cheezecake:1
-    container_name: cheezecake_web
+#    container_name: cheezecake_web
     env_file: .env
     volumes:
       - .:/cheezecake_blog
@@ -16,7 +16,7 @@ services:
 
   postgres:
     image: postgres:10.6
-    container_name: cheezecake_postgres
+#    container_name: cheezecake_postgres
     env_file: .env
     ports:
       - 5432:5432
