--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,6 +12,7 @@ services:
       - web
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./home/ec2-user/cheezecake_blog/shared:/etc/home/ec2-user/cheezecake_blog/shared
       - static_files:/cheezecake_blog/public
     depends_on:
       - web
