--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -33,6 +33,7 @@ COPY . /cheezecake_blog
 RUN bundle install
 
 RUN mkdir -p /home/ec2-user/cheezecake_blog/shared
+COPY /home/ec2-user/cheezecake_blog/shared /home/ec2-user/cheezecake_blog/shared
 
 # Entrypoint
 COPY ./docker/web/docker-entrypoint.sh /
