--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "axios": "latest",
     "babel-eslint": "^10.0.1",
     "babel-preset-react": "^6.24.1",
+    "chroma-js": "^2.0.3",
     "eslint": "^5.10.0",
     "eslint-plugin-react": "^7.11.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0"
   },
