--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-react": "^7.11.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-color": "^2.17.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.4.3",
