--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,7 @@
             "error",
             "never"
         ],
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "react/display-name": "off"
     }
 }
