--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,4 +21,6 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./docker/postgres/data:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql/data
+volumes:
+  postgres:
