--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "cheezecake_blog",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^11.2.0",
-    "@ckeditor/ckeditor5-react": "^1.1.0",
     "@rails/webpacker": "3.5",
     "axios": "latest",
     "babel-eslint": "^10.0.1",
@@ -15,6 +13,8 @@
     "react": "^16.6.3",
     "react-color": "^2.17.3",
     "react-dom": "^16.6.3",
+    "react-highlight": "^0.12.0",
+    "react-markdown": "^4.1.0",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.4.3",
     "semantic-ui-css": "^2.4.1",
