--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ yarn-debug.log*
 .env
 
 # Ignore docker container data files.
+/docker/kafka
 /docker/postgres/data
 docker-compose.override.yml
 
