--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "eslint": "^5.10.0",
     "eslint-plugin-react": "^7.11.1",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
+    "react": "^16.9.0",
     "react-color": "^2.17.3",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.9.0",
+    "react-dropzone": "^10.1.8",
     "react-highlight": "^0.12.0",
     "react-markdown": "^4.1.0",
     "react-router-dom": "^4.3.1",
