--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ yarn-debug.log*
 
 # Ignore docker container data files.
 /docker/postgres/data
+/docker/elasticsearch/data
 docker-compose.override.yml
 
 deploy.rb
