--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,13 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - postgres:/var/lib/postgresql/data
-volumes:
-  postgres:
+      - ./docker/postgres/data:/var/lib/postgresql/data
+
+  elasticsearch:
+    image: elasticsearch:7.3.1
+    environment:
+      - cluster.initial_master_nodes=elasticsearch
+    volumes:
+      - ./docker/elasticsearch/data:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
