--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chroma-js": "^2.0.3",
     "eslint": "^5.10.0",
     "eslint-plugin-react": "^7.11.1",
+    "object-to-formdata": "^2.1.0",
     "prop-types": "^15.6.2",
     "react": "^16.9.0",
     "react-color": "^2.17.3",
@@ -16,10 +17,10 @@
     "react-dropzone": "^10.1.8",
     "react-highlight": "^0.12.0",
     "react-markdown": "^4.1.0",
-    "react-router-dom": "^4.3.1",
-    "react-select": "^2.4.3",
+    "react-router-dom": "^5.0.1",
+    "react-select": "^3.0.4",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.84.0"
+    "semantic-ui-react": "^0.88.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
