--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,13 @@
             "never"
         ],
         "react/prop-types": "off",
-        "react/display-name": "off"
+        "react/display-name": "off",
+        "no-unused-vars": [
+            "error",
+            { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
+        ]
+    },
+    "globals": {
+        "gtag": "readonly"
     }
 }
