--- a/docker-compose.certbot.yml
+++ b/docker-compose.certbot.yml
@@ -4,8 +4,8 @@ services:
     image: nginx
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./certbot/data/conf:/etc/letsencrypt
-      - ./certbot/data/www:/var/www/certbot
+      - ./docker/certbot/data/conf:/etc/letsencrypt
+      - ./docker/certbot/data/www:/var/www/certbot
     ports:
       - 80:80
       - 443:443
@@ -13,5 +13,5 @@ services:
   certbot:
     image: certbot/certbot
     volumes:
-      - ./certbot/data/conf:/etc/letsencrypt
-      - ./certbot/data/www:/var/www/certbot
+      - ./docker/certbot/data/conf:/etc/letsencrypt
+      - ./docker/certbot/data/www:/var/www/certbot
