--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,20 +12,14 @@ services:
       - web
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./certbot/data/conf:/etc/letsencrypt
-      - ./certbot/data/www:/var/www/certbot
+      - ./docker/certbot/data/conf:/etc/letsencrypt
+      - ./docker/certbot/data/www:/var/www/certbot
       - static_files:/cheezecake_blog/public
     depends_on:
       - web
     ports:
       - 80:80
       - 443:443
-
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./certbot/data/conf:/etc/letsencrypt
-      - ./certbot/data/www:/var/www/certbot
 
 volumes:
   static_files:
