--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -24,8 +24,8 @@ server {
    # access_log /cheezecake_blog/log/nginx.access.log;
    # error_log /cheezecake_blog/log/nginx.error.log;
 
-   ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-   ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+   ssl_certificate /etc/letsencrypt/live/www.cheezecake.net/fullchain.pem;
+   ssl_certificate_key /etc/letsencrypt/live/www.cheezecake.net/privkey.pem;
    include /etc/letsencrypt/options-ssl-nginx.conf;
    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
