--- a/docker/certbot/nginx.conf
+++ b/docker/certbot/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name www.cheezecake.net;
+    server_name www.example.com;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
