--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 /yarn-error.log
 
 /public/assets
+/public/cache
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
@@ -42,6 +43,7 @@ yarn-debug.log*
 /docker/kafka
 /docker/postgres/data
 /docker/elasticsearch/data
+/docker/certbot/data
 docker-compose.override.yml
 
 deploy.rb
