--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,6 +12,8 @@ services:
       - web
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./docker/certbot/data/conf:/etc/letsencrypt
+      - ./docker/certbot/data/www:/var/www/certbot
       - static_files:/cheezecake_blog/public
     depends_on:
       - web
