--- a/web_client/package.json
+++ b/web_client/package.json
@@ -11,12 +11,15 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "latest",
+    "file-loader": "^5.0.2",
     "next": "9.1.4",
+    "next-compose-plugins": "^2.2.0",
     "node-sass": "^4.13.0",
     "object-to-formdata": "^2.1.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.0"
+    "semantic-ui-react": "^0.88.0",
+    "url-loader": "^2.3.0"
   }
 }
