--- a/web_client/package.json
+++ b/web_client/package.json
@@ -14,10 +14,13 @@
     "file-loader": "^5.0.2",
     "next": "9.1.4",
     "next-compose-plugins": "^2.2.0",
+    "next-transpile-modules": "^2.3.1",
     "node-sass": "^4.13.0",
-    "object-to-formdata": "^2.1.0",
+    "object-to-formdata": "latest",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-dropzone": "^10.1.8",
+    "sass-loader": "^8.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.0",
     "url-loader": "^2.3.0"
