--- a/.dockerignore
+++ b/.dockerignore
@@ -14,3 +14,9 @@ docker/certbot/data
 yarn-debug.log*
 yarn-error.log*
 .yarn-integrity
+
+web_client/.next
+web_client/node_modules
+web_client/yarn-debug.log*
+web_client/yarn-error.log*
+web_client/.yarn-integrity
