--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=pass
 DATABASE_HOST=postgres
 
-WEBPACKER_DEV_SERVER_HOST=web
+# WEBPACKER_DEV_SERVER_HOST=web
