--- a/web_client/package.json
+++ b/web_client/package.json
@@ -20,6 +20,9 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-dropzone": "^10.1.8",
+    "react-highlight": "^0.12.0",
+    "react-markdown": "^4.1.0",
+    "react-color": "^2.17.3",
     "sass-loader": "^8.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.0",
