--- a/web_client/package.json
+++ b/web_client/package.json
@@ -23,9 +23,11 @@
     "react-highlight": "^0.12.0",
     "react-markdown": "^4.1.0",
     "react-color": "^2.17.3",
+    "react-select": "^3.0.4",
     "sass-loader": "^8.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.0",
-    "url-loader": "^2.3.0"
+    "url-loader": "^2.3.0",
+    "chroma-js": "^2.0.3"
   }
 }
