--- a/docker/web_client/Dockerfile
+++ b/docker/web_client/Dockerfile
@@ -1,10 +1,11 @@
 FROM node:10
 
-RUN mkdir /root/webapp
-WORKDIR /root/webapp
+RUN mkdir /webapp
+WORKDIR /webapp
 #COPY ./web_client /home/node/webapp
-COPY ./web_client/package*.json ./
-RUN npm install
+COPY ./web_client ./
+#COPY ./web_client/package*.json ./
+#RUN npm install
 
 # Entrypoint
 COPY ./docker/web_client/docker-entrypoint.sh /
