--- a/web_client/package.json
+++ b/web_client/package.json
@@ -13,6 +13,8 @@
     "axios": "latest",
     "chroma-js": "^2.0.3",
     "classnames": "^2.2.6",
+    "cookie": "^0.4.0",
+    "cookie-parser": "^1.4.4",
     "file-loader": "^5.0.2",
     "next": "9.1.4",
     "next-compose-plugins": "^2.2.0",
@@ -22,6 +24,7 @@
     "prop-types": "^15.6.2",
     "react": "16.12.0",
     "react-color": "^2.17.3",
+    "react-cookie": "^4.0.1",
     "react-dom": "16.12.0",
     "react-dropzone": "^10.1.8",
     "react-highlight": "^0.12.0",
