--- a/web_client/package.json
+++ b/web_client/package.json
@@ -18,6 +18,7 @@
     "file-loader": "^5.0.2",
     "next": "9.1.4",
     "next-compose-plugins": "^2.2.0",
+    "next-cookies": "^2.0.3",
     "next-transpile-modules": "^2.3.1",
     "node-sass": "^4.13.0",
     "object-to-formdata": "latest",
