--- a/web_client/.eslintrc.json
+++ b/web_client/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "env": {
         "browser": true,
+        "node": true,
         "commonjs": true,
         "es6": true
     },
@@ -46,7 +47,8 @@
         "no-unused-vars": [
             "error",
             { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
-        ]
+        ],
+        "react/react-in-jsx-scope": "off"
     },
     "globals": {
         "gtag": "readonly"
