--- a/web_client/package.json
+++ b/web_client/package.json
@@ -11,10 +11,13 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "latest",
+    "babel-eslint": "^10.0.3",
     "chroma-js": "^2.0.3",
     "classnames": "^2.2.6",
     "cookie": "^0.4.0",
     "cookie-parser": "^1.4.4",
+    "eslint": "^5.10.0",
+    "eslint-plugin-react": "^7.11.1",
     "file-loader": "^5.0.2",
     "next": "9.1.4",
     "next-compose-plugins": "^2.2.0",
