--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,8 @@ jobs:
 
       - restore_cache:
           name: Restore yarn cache
-          working_directory: ./web_client
           keys:
-            - cheezecake-is-good-v3-{{ checksum "yarn.lock" }} # to clear the cache, upgrade the version
+            - cheezecake-is-good-v3-{{ checksum "./web_client/yarn.lock" }} # to clear the cache, upgrade the version
 
       - run:
           name: Yarn install
@@ -43,8 +42,7 @@ jobs:
 
       - save_cache:
           name: Save yarn cache
-          working_directory: ./web_client
-          key: cheezecake-is-good-v3-{{ checksum "yarn.lock" }}
+          key: cheezecake-is-good-v3-{{ checksum "./web_client/yarn.lock" }}
           paths:
             - ~/.cache/yarn
 
