--- a/web_client/package.json
+++ b/web_client/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.4",
     "eslint": "^5.10.0",
     "eslint-config-dev": "^2.0.0",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^5.0.2",
     "next": "9.1.4",
