--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -21,19 +21,19 @@ FROM ruby:2.5.3
 # Install ImageMagick
 RUN apt-get update -qq && apt-get install -y --no-install-recommends imagemagick
 
-# Install Node & Yarn
+# Install Node
 RUN curl -sL https://deb.nodesource.com/setup_9.x | bash -
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
-RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
 RUN apt-get update -qqy \
-    && apt-get -qqyy install nodejs yarn \
+    && apt-get -qqyy install nodejs \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy project
 RUN mkdir /cheezecake_blog
 WORKDIR /cheezecake_blog
 COPY . /cheezecake_blog
-RUN bundle install
+# * No `bundle install` *
+# -> Keep this process in lightweight, speed up build.
+# -> Put gems in volume, put `bundle install` in docke-entrypoint.sh
 
 # Entrypoint
 COPY ./docker/web/docker-entrypoint.sh /
